--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -145,6 +145,7 @@ es:
           su contraseña de un uso único, siempre y cuando cumpla con los criterios
           anteriores.
         us_country_code: NOT TRANSLATED YET
+      return_to_profile: NOT TRANSLATED YET
       review:
         financial_info: "¿Dónde está la información de mi cuenta financiera?"
         info_verified_html: Encontramos registros que coinciden con su %{teléfono_mensaje}
