--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -25,8 +25,10 @@ fr:
         success: Votre compte a été vérifié.
         with_phone_button: Verifiez avec votre téléphone
     items:
+      delete_your_account: NOT TRANSLATED YET
       personal_key: Clé personnelle
     links:
+      delete_account: NOT TRANSLATED YET
       regenerate_personal_key: Obtenez une nouvelle clé
     security:
       link: En apprendre davantage dans le Centre d'aide
