--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -3,6 +3,7 @@ fr:
   headings:
     account:
       account_history: Historique du compte
+      account_management: NOT TRANSLATED YET
       login_info: Votre compte
       profile_info: Information du profil
       reactivate: Réactivez votre compte
