Surface twillio errors to user
**Why**:
Users received no indication if a number
was invalid when setting up OTP.

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -38,4 +38,7 @@ en:
       usps_otp_expired: Your confirmation code has expired. Please request another
         letter for a new code.
       weak_password: Your password is not strong enough. %{feedback}
+      invalid_phone_number: The phone number entered is not valid.
+      invalid_sms_number: The phone number entered doesn't support text messaging.
+      otp_failed: Your one time password failed to send.
     not_authorized: You are not authorized to perform this action.
