Update password creation page
**Why**: For a better user experience. We were using "notice" flashes
(blue with exclamation mark) — which imply further action is needed —
instead of "success" (green with checkmark).

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -9,6 +9,7 @@ es:
         confirmar el uso de su email.
       send_paranoid_instructions: En pocos minutos recibirá un email con instrucciones
         para confirmar el uso de su email.
+      sign_in: Inicie la sesión de nuevo.
     failure:
       already_authenticated: ''
       inactive: Su cuenta aún no está activada.
