--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -171,6 +171,7 @@ es:
         other: Tiene usted <strong>%{count} intentos restantes.</strong>
       button:
         fail: Bueno
+        jobfail: Inténtelo de nuevo mañana
         warning: Inténtelo de nuevo
       financials:
         fail: Su cuenta está <strong>bloqueada por 24 horas</ strong> antes de intentar
@@ -178,6 +179,7 @@ es:
           información sobre la verificación de identidad.
         heading: No hemos podido encontrar registros que coincidan con su información
           financiera.
+        jobfail: NOT TRANSLATED YET
         timeout: NOT TRANSLATED YET
         warning: Compruebe la información que ingresó.
       phone:
@@ -186,11 +188,13 @@ es:
           información sobre la verificación de identidad.
         heading: No hemos podido encontrar registros que coincidan con la información
           de su teléfono.
+        jobfail: NOT TRANSLATED YET
         timeout: NOT TRANSLATED YET
         warning: Compruebe la información que ingresó.
       sessions:
         fail: Su cuenta está <strong>bloqueada por 24 horas</ strong> antes de que
           pueda intentar verificarla de nuevo.
+        jobfail: NOT TRANSLATED YET
         heading: No hemos podido encontrar registros que coincidan con su información
           personal.
         timeout: NOT TRANSLATED YET
