--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -182,12 +182,14 @@ fr:
         other: Il ne vous reste que strong%{count} tentatives./strong
       button:
         fail: OK
+        jobfail: Essayez à nouveau demain
         warning: Essayez à nouveau
       financials:
         fail: Votre compte est strongverrouillé pour 24 heures/strong au cours desquelles
           vous ne pourrez pas y accéder. Consultez notre Centre d'aide pour plus d'information
           sur la vérification de votre identité.
         heading: Nous ne trouvons pas de données qui correspondent à vos données financières.
+        jobfail: NOT TRANSLATED YET
         timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie.
       phone:
@@ -196,6 +198,7 @@ fr:
           sur la vérification de votre identité.
         heading: Nous ne trouvons pas de données qui correspondent à vos informations
           téléphoniques.
+        jobfail: NOT TRANSLATED YET
         timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie.
       sessions:
@@ -203,6 +206,7 @@ fr:
           vous ne pourrez pas y accéder.
         heading: Nous ne trouvons pas de données qui correspondent à vos informations
           téléphoniques.
+        jobfail: NOT TRANSLATED YET
         timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie. Un numéro
           de sécurité sociale, un code ZIP ou une date de naissance mal écrits sont
