--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -11,7 +11,6 @@ es:
         resend: Enviar otra carta
         send: Enviar una carta
       return_to_account: NOT TRANSLATED YET
-      return_to_sp: NOT TRANSLATED YET
       send_confirmation_code: NOT TRANSLATED YET
     cancel:
       modal_header: "¿Está seguro que desea cancelar?"
@@ -105,6 +104,7 @@ es:
         este proceso. Si no tiene la información que necesitamos en este momento,
         puede continuar más tarde.
       come_back_later: NOT TRANSLATED YET
+      come_back_later_sp_html: NOT TRANSLATED YET
       confirm: Usted ha encriptado sus datos verificados.
       dupe_ssn1: Si recibe este error, es posible que ya haya creado y verificado
         una cuenta, pero con un email diferente.
