Allow email NameID Format on a per-SP basis
**Why**: In general, we recommend using the user's persisent UUID
as the NameID Format, but in some cases, some SPs are only able to
use the email address. The easiest way to allow those SPs to use
email address was to update the `saml_idp` gem to pick the correct
NameID format from the IdP's config based on the SP's requested
format, and then add logic in the IdP to only allow the `emailAddress`
NameID Format from whitelisted SPs.

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -34,6 +34,7 @@ en:
       personal_key_incorrect: Incorrect personal key
       requires_phone: requires you to enter your phone number.
       unauthorized_authn_context: Unauthorized authentication context
+      unauthorized_nameid_format: Unauthorized nameID format
       unauthorized_service_provider: Unauthorized Service Provider
       usps_otp_expired: Your confirmation code has expired. Please request another
         letter for a new code.
