--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -32,6 +32,7 @@ es:
       personal_key_incorrect: La clave personal es incorrecta
       requires_phone: requiere que ingrese su número de teléfono.
       unauthorized_authn_context: Contexto de autenticación no autorizado
+      unauthorized_nameid_format: NOT TRANSLATED YET
       unauthorized_service_provider: Proveedor de servicio no autorizado
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Su contraseña no es suficientemente segura. %{feedback}
