--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -35,6 +35,7 @@ fr:
       personal_key_incorrect: Clé personnelle incorrecte
       requires_phone: vous demande d'entrer votre numéro de téléphone.
       unauthorized_authn_context: Contexte d'authentification non autorisé
+      unauthorized_nameid_format: NOT TRANSLATED YET
       unauthorized_service_provider: Fournisseur de service non autorisé
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Votre mot de passe n'est pas assez fort. %{feedback}
