--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -177,6 +177,8 @@ fr:
           Celle-ci contient un code de confirmation.
         resend: Envoyez-moi une autre lettre.
         success: Elle devrait arriver dans 5 à 10 jours ouvrables.
+      agencies_login: NOT TRANSLATED YET
+      agency_login_html: NOT TRANSLATED YET
     modal:
       attempts:
         one: Il ne vous reste qu' strongune tentative./strong
