--- a/config/locales/titles/fr.yml
+++ b/config/locales/titles/fr.yml
@@ -23,7 +23,7 @@ fr:
     sign_up:
       completion_html: Vous avez %{accent} avec %{app}
       loa1: créé votre compte
-      loa3: verifié votre identité
+      verified: Vous avez verifié votre identité.
     totp_setup:
       new: Configurer l'authentification à deux facteurs
     two_factor_setup: Configuration de l'authentification à deux facteurs
