--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -125,8 +125,8 @@ es:
           8 dígitos de su tarjeta de crédito.
       hardfail: NOT TRANSLATED YET
       hardfail4_html: NOT TRANSLATED YET
-      help_center: Visite nuestro Centro de Ayuda para obtener más información sobre
-        la verificación de su cuenta.
+      help_center_html: Visite nuestro <strong>Centro de Ayuda</strong> para obtener
+        más información sobre la verificación de su cuenta.
       loading: NOT TRANSLATED YET
       mail_sent: Su carta está en camino
       otp_delivery_method:
