Update verify messages with app name
**Why**:
Clarify which entity is verifying the users
identity. Updated styles to be more consistent

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -220,7 +220,7 @@ en:
       expectations: Next, help us identify you
       fail: We were unable to verify your identity
       financials: Provide a financial account number
-      hardfail: We weren't able to verify your identity
+      hardfail: We weren't able to verify your identity with %{app}
       intro: Help us identify you
       mail:
         resend: Want another letter?
