--- a/config/locales/service_providers/es.yml
+++ b/config/locales/service_providers/es.yml
@@ -11,9 +11,9 @@ es:
       header: "¿Has venido de USAJOBS?"
       account_page:
         body: Tendrá que crear una nueva cuenta de login.gov usando la misma dirección
-          de correo electrónico que usó para USAJobs (su dirección de correo electrónico
+          de correo electrónico que usó para USAJOBS (su dirección de correo electrónico
           primaria o secundaria).
       body_html: Tendrá que %{link} usando la misma dirección de correo electrónico
-        que usó para USAJobs (su dirección de correo electrónico primaria o secundaria).
+        que usó para USAJOBS (su dirección de correo electrónico primaria o secundaria).
       create_account_link: crear una nueva cuenta de login.gov
     learn_more: Not translated yet
