--- a/config/locales/titles/fr.yml
+++ b/config/locales/titles/fr.yml
@@ -24,6 +24,7 @@ fr:
       completion_html: Vous avez %{accent} avec %{app}
       loa1: créé votre compte
       verified: Vous avez verifié votre identité avec %{app}
+      new_sp: NOT TRANSLATED YET
     totp_setup:
       new: Configurer l'authentification à deux facteurs
     two_factor_setup: Configuration de l'authentification à deux facteurs
