Add state id proofing to profile step
**Why**: So that we can collect state id data from users and use it
to confirm their identity

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -31,6 +31,8 @@ en:
         personal_key: 'Please enter your personal key for this account. Example: ABC1-DEF2-G3HI-J456'
         ssn: 'Your Social Security Number must be entered in as ###-##-####'
         zipcode: 'Your zipcode must be entered in as #####-####'
+      unsupported_jurisdiction: Sorry, we don't currently verify anyone from this
+        state
     form:
       activate_by_mail: Activate my account by mail.
       address1: Street address 1
@@ -49,6 +51,11 @@ en:
       previous_address_html: Moved in the <strong>last 3 months</strong>?
       ssn_label_html: Social Security Number %{tooltip}
       state: State
+      state_id: Identification number
+      state_id_type:
+        drivers_license: Driver's license
+        drivers_permit: Driver's permit
+        state_id_card: State ID card
       zipcode: ZIP Code
     index:
       continue_link: Yes, continue
