--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -55,10 +55,12 @@ fr:
       ssn_label_html: Numéro de sécurité sociale %{tooltip}
       state: État
       state_id: NOT TRANSLATED YET
+      state_id_number: NOT TRANSLATED YET
       state_id_type:
         drivers_license: NOT TRANSLATED YET
         drivers_permit: NOT TRANSLATED YET
         state_id_card: NOT TRANSLATED YET
+      state_id_type_label: NOT TRANSLATED YET
       zipcode: Code ZIP
     index:
       continue_link: Oui, continuer
