--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -17,6 +17,10 @@ es:
       expired: ha caducado, por favor solicite uno nuevo
       format_mismatch: Por favor, use el formato solicitado.
       improbable_phone: NOT TRANSLATED YET
+      invalid_calling_area: NOT TRANSLATED YET
+      invalid_phone_number: NOT TRANSLATED YET
+      invalid_sms_number: El número de teléfono ingresado no admite mensajes de texto.
+        Pruebe la opción de llamada telefónica.
       missing_field: Por favor, rellene este campo.
       must_have_us_country_code: NOT TRANSLATED YET
       no_password_reset_profile: Ningún perfil ha sido desactivado recientemente por
@@ -27,6 +31,7 @@ es:
       not_saved:
         one: '1 error no permitió guardar este %{resource}:'
         other: "%{count} errores no permitieron guardar este %{resource}:"
+      otp_failed: NOT TRANSLATED YET
       otp_incorrect: El código es incorrecto. ¿Lo escribió correctamente?
       password_incorrect: La contraseña es incorrecta
       personal_key_incorrect: La clave personal es incorrecta
@@ -36,7 +41,4 @@ es:
       unauthorized_service_provider: Proveedor de servicio no autorizado
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Su contraseña no es suficientemente segura. %{feedback}
-      invalid_phone_number: NOT TRANSLATED YET
-      invalid_sms_number: NOT TRANSLATED YET
-      otp_failed: NOT TRANSLATED YET
     not_authorized: No está autorizado para realizar esta acción.
