--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -20,6 +20,9 @@ fr:
       expired: est expiré, veuillez en demander un nouveau
       format_mismatch: Veuillez vous assurer de respecter le format requis.
       improbable_phone: NOT TRANSLATED YET
+      invalid_calling_area: NOT TRANSLATED YET
+      invalid_phone_number: NOT TRANSLATED YET
+      invalid_sms_number: NOT TRANSLATED YET
       missing_field: Veuillez remplir ce champ.
       must_have_us_country_code: NOT TRANSLATED YET
       no_password_reset_profile: Aucun profil récemment désactivé en raison d'une
@@ -30,6 +33,7 @@ fr:
       not_saved:
         one: '1 erreur a interdit la sauvegarde de cette %{resource} :'
         other: "%{count} des erreurs ont empêché la sauvegarde de cette %{resource} :"
+      otp_failed: NOT TRANSLATED YET
       otp_incorrect: Code non valide. L'avez-vous inscrit correctement?
       password_incorrect: Mot de passe incorrect
       personal_key_incorrect: Clé personnelle incorrecte
@@ -39,7 +43,4 @@ fr:
       unauthorized_service_provider: Fournisseur de service non autorisé
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Votre mot de passe n'est pas assez fort. %{feedback}
-      invalid_phone_number: NOT TRANSLATED YET
-      invalid_sms_number: NOT TRANSLATED YET
-      otp_failed: NOT TRANSLATED YET
     not_authorized: Vous n'êtes pas autorisé(e) à effectuer cette action.
